<resources>
    <string name="app_name">HiLo</string>
    <string name="game_instructions">Try to guess a number between 1 and 1000</string>
    <string name="game_notNumber">This is Not a number. Please, try again.</string>
    <string name="game_remainingGuesses">%1$d remaining guesses...</string>
    <string name="game_lose">You Lost</string>
    <string name="game_PleaseReset">Please Reset!</string>
    <string name="game_win">Excellent win!</string>
    <string name="game_greatWin">Superior win!</string>
    <string name="game_guessHigh">%1$d... Too High!</string>
    <string name="game_guessLow">%1$d... Too Low!</string>
    <string name="game_result">The number is %1$d</string>
    <string name="btn_guess">Guess Number</string>
    <string name="btn_reset">Reset</string>
    <string name="img_desc_happyFace">Happy Face</string>
    <string name="img_desc_angryFace">Angry Face</string>
    <string name="img_desc_win">Very Happy Face</string>
    <string name="action_about">About</string>
    <string name="author" translatable="false">Priscila Ribas da Costa (riba0007)</string>

</resources>
