<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.edumedia.riba0007.hilo.MainActivity">

    <ImageView
        android:id="@+id/icCompetitor"
        android:layout_width="116dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/img_desc_happyFace"
        android:src="@drawable/ic_mhappy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/edUserGuess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/icCompetitor" />

    <Button
        android:id="@+id/btGuess"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/btn_guess"
        android:textColor="@color/colorTextLight"
        android:layout_alignParentStart = "true"
        android:layout_alignParentEnd = "true"
        android:onClick="onClickBtGuess"
        android:layout_marginTop="38dp"
        app:layout_constraintTop_toBottomOf="@+id/edUserGuess"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btReset"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="0dp"
        android:background="@color/colorPrimaryLight"
        android:longClickable="true"
        android:onClick="onClickBtReset"
        android:text="@string/btn_reset"
        android:textColor="@color/colorTextLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/btGuess"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="171dp"
        android:layout_height="82dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:labelFor="@id/edUserGuess"
        android:text="@string/game_instructions"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorTextDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/icCompetitor"
        app:layout_constraintLeft_toRightOf="@+id/icCompetitor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/icCompetitor"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5" />

    <TextView
        android:id="@+id/tvNGuesses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/colorTextDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/btGuess"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edUserGuess"
        app:layout_constraintVertical_bias="0.5"
        tools:text="@string/game_remainingGuesses" />
</android.support.constraint.ConstraintLayout>
